# Tools

./: Note.txt  Other.txt  POSTMAN.txt
Apache Server/: Module mô hình web.txt  Tổng kết module.txt  Tổng kết ngoài.txt
Apache Server/Module mở rộng dần hệ thống cực lớn/: Module mở rộng dần hệ thống cực lớn.txt
Docker/: Docker Advanced.txt  Docker intermidiate.txt  Test.txt  Thực hành docker hub.txt  Tổng kết module.txt  Tổng kết ngoài.txt  VD Docker cho deployment.txt
Docker/Docker Check/: Docker Basic.txt  Docker Other.txt  Test.txt
Docker/Docker Check/dockercompose/: learnYML.yml  (+1 more)
Docker/dockerhaproxy/: haproxy.cfg
FireBase/: Firebase.txt
FireBase/Hosting/: .firebaserc
FireBase/Login NodeJS/: Login.txt
Firebase/: Tổng kết module.txt
Firebase/FireBase/Authentication/: CMakeLists.txt  athhandler.cpp  main.cpp
Github Actions/: Tổng kết module.txt  Tổng kết ngoài.txt  testdotnet.yml  testnodejs.yml
K8s/: Tổng kết module.txt  Tổng kết ngoài.txt
K8s/HPA/: hpa.yaml
K8s/ReplicaSet/: rs.yaml
K8s/Tạo pods/: checklivecontainer.yaml  multicontainerpod.yaml  nginx-swarmtest-vol.yaml  nginx.yaml  swarmtest-node.yaml  tools.yaml
K8s/dashboard/: dashboard-v2_7-custom.yaml
Kiến trúc web/: 3 Kiến trúc hệ thống.txt  Mô hình từng làm.txt  Mở rộng dần hệ thống cực lớn.txt
Kiến trúc web/Apache/: Kiến thức và thao tác part 2.txt  Kiến thức và thao tác.txt
Kiến trúc web/Nginx/: Kiến thức.txt  Thao tác basic config nginx.txt
Nginx/: Module hosting nginx.txt  Thực hành.txt  Tổng kết module.txt
Postman/: Tổng kết module.txt
Swagger/: Tổng kết module.txt
(+105 files in other folders)
